[fix] 인증 권한 추가