@@ -2,8 +2,10 @@ package com.konkuk.propit.global.security.principal;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 @Getter
@@ -17,7 +19,7 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // 지금은 권한 없으므로 빈값
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
